[package]
name = "causality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.77"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "70c916588684e4b7aa2cf9f9d11ad37a68f65d84" }
nalgebra = "0.29.0"